# XDU_HealthCard_Cpp_Server

./: .gitignore  CMakeLists.txt  README.md  main.cpp
controller/: authController.cpp  authController.h  serveController.cpp  serveController.h
database/: connection_pool.cpp  connection_pool.h  mysql.cpp  mysql.h
database/mysql/: mysql.cpp  mysql.h  mysql_conn_pool.cpp  mysql_conn_pool.h
database/redis/: redis.cpp  redis.h  redis_conn_pool.cpp  redis_conn_pool.h
model/: healthCard.h  summary.h  threeCheck.h
model/base/: baseResponse.h  retCodeDef.h
routes/: router.cpp  router.h
service/: serveService.cpp  serveService.h
utils/: flag.cpp  flag.h  utils.cpp  utils.h
